# Quine-bayesweb

./: .gitignore  README.md  pyproject.toml  test.json
app/: app.py
bayesweb/: __init__.py  cli.py  graph.py  indicators.py  propagation.py  shock.py  viz.py
docs/Toy-model/: index.html
examples/: basic_example.py
r-wrapper/: bayesweb.R
tests/: test_core.py
